--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="content">
     <div class="row mt-5">
         <div class="col-md-7 col-sm-12">
-            <img class="cover" src="./../../../assets/images/funtionSchoolHub.png" alt="">
+            <!-- <img class="cover" src="./../../../assets/images/funtionSchoolHub.png" alt=""> -->
         </div>
 
         <div class="col-md-5 col-sm-12">
