--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,8 @@
         <div class="col-md-5 col-sm-12">
             <div class="row mt-5 mr-2">
                 <div class="col-12">
-                    <auth-login></auth-login>
-                    <!-- <auth-register></auth-register> -->
+                    <!-- <auth-login></auth-login> -->
+                    <auth-register></auth-register>
                 </div>
             </div>
         </div>
